@@ -1,6 +1,7 @@
 Version 0.5.2 (ongoing):
 	implement rich comparison rather than cmp (fixes HilbertSpace() == None)
 	check ininstance in HilbertArray.__eq__
+	HilbertArray.O method
 
 Version 0.5.1 (2011-04-03):
 	cphase was erroneously called cnot
